xong phan member

--- a/index.html
+++ b/index.html
@@ -221,6 +221,111 @@
                 </div>
             </div>
         </div>
+        <!-- FEATURED -->
+        <div class="featured">
+            <div class="container">
+                <div class="featured__inner">
+                    <div class="featured__media">
+                        <figure>
+                            <img src="./assets/img/featured1.avif" alt="featured-1" class="featured__img">
+                            <img src="./assets/img/featured2.avif" alt="featured-2" class="featured__img">
+                        </figure>
+                    </div>
+                    <div class="featured__content">
+                        <h2 class="featured__heading section-heading">
+                            Take back your smile with shine.
+                        </h2>
+                        <p class="featured__desc section-desc">
+                            If you’re missing multiple teeth due to decay, injury, or the natural aging process,
+                            dentures
+                            might be the perfect solution.
+                        </p>
+                        <a href="#!" class="btn featured__more">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- MEMBER -->
+        <div class="member">
+            <div class="container">
+                <h2 class="section-heading member__heading">
+                    Our virtual dentist
+                </h2>
+                <a href="#!" class="btn member__btn">Meet out dentist</a>
+                <div class="member__list">
+                    <section class="member-item">
+                        <figure class="member-item__figure">
+                            <img src="./assets/img/member1.png" alt="" class="member-item__img">
+                        </figure>
+                        <h2 class="member__heading2">
+                            Dr. Essence Page
+                        </h2>
+                        <span class="member__info">
+                            DDS, California - Linda University
+                        </span>
+                    </section>
+                    <section class="member-item">
+                        <figure class="member-item__figure">
+                            <img src="./assets/img/member2.png" alt="" class="member-item__img">
+                        </figure>
+                        <h2 class="member__heading2">
+                            Dr. Essence Page
+                        </h2>
+                        <span class="member__info">
+                            DDS, California - Linda University
+                        </span>
+                    </section>
+                    <section class="member-item">
+                        <figure class="member-item__figure">
+                            <img src="./assets/img/member3.png" alt="" class="member-item__img">
+                        </figure>
+                        <h2 class="member__heading2">
+                            Dr. Essence Page
+                        </h2>
+                        <span class="member__info">
+                            DDS, California - Linda University
+                        </span>
+                    </section>
+                    <section class="member-item">
+                        <figure class="member-item__figure">
+                            <img src="./assets/img/member4.png" alt="" class="member-item__img">
+                        </figure>
+                        <h2 class="member__heading2">
+                            Dr. Essence Page
+                        </h2>
+                        <span class="member__info">
+                            DDS, California - Linda University
+                        </span>
+                    </section>
+                    <!-- <section class="member-item">
+                        <img src="./assets/img/member5.webp" alt="">
+                    </section>
+                    <section class="member-item">
+                        <img src="./assets/img/member6.jpg" alt="">
+                    </section>
+                    <section class="member-item">
+                        <img src="./assets/img/member7.webp" alt="">
+                    </section> -->
+                </div>
+                <div class="member__control">
+                    <!-- PREVIOUS -->
+                    <button class="member__control-btn">
+                        <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                    <!-- NEXT -->
+                    <button class="member__control-btn">
+                        <svg class="member__control-next-icon" width="6" height="12" viewBox="0 0 6 12" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1L0.5 6L5.5 11" stroke="currentColor" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
